[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/field.gd" type="Script" id=1]
[ext_resource path="res://assets/player_side.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/entity.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/player.gd" type="Script" id=5]
[ext_resource path="res://scripts/fasc.gd" type="Script" id=6]
[ext_resource path="res://scripts/cam.gd" type="Script" id=7]
[ext_resource path="res://assets/ui.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/shake.gd" type="Script" id=9]

[node name="field" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 287.492, 839.221 ],
"_edit_vertical_guides_": [ 415.714, -516.754, 1342.68 ]
}

[node name="field" parent="." instance=ExtResource( 2 )]

[node name="ball" parent="." instance=ExtResource( 3 )]
contacts_reported = 1

[node name="p0" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 90 )
script = ExtResource( 5 )

[node name="p1" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 90 )
script = ExtResource( 5 )

[node name="f0" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -90 )
script = ExtResource( 6 )

[node name="f1" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -90 )
script = ExtResource( 6 )

[node name="cam" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_left = -5000
limit_top = -600
limit_right = 1500
limit_bottom = 1000
limit_smoothed = true
smoothing_enabled = true
editor_draw_drag_margin = true
script = ExtResource( 7 )

[node name="shake" type="Node2D" parent="cam"]
script = ExtResource( 9 )

[node name="shake_tween" type="Tween" parent="cam/shake"]

[node name="freq" type="Timer" parent="cam/shake"]

[node name="duration" type="Timer" parent="cam/shake"]

[node name="ui" parent="." instance=ExtResource( 8 )]
camera = NodePath("../cam")

[node name="fasc_green" type="Node2D" parent="."]

[connection signal="timeout" from="cam/shake/freq" to="cam/shake" method="_on_freq_timeout"]
[connection signal="timeout" from="cam/shake/duration" to="cam/shake" method="_on_duration_timeout"]

[editable path="ui"]
